--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.18.13",
+    "critical": "^1.3.9",
     "gulp": "3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-combine-media-queries": "^0.2.0",
