--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-remove-files": "0.0.3",
     "gulp-sass": "^4.0.1",
     "gulp-svg-sprite": "^1.3.6",
-    "gulp-twig": "^1.2.0"
+    "gulp-twig": "^1.2.0",
+    "node-sass": "^5.0.0"
   }
 }
