--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "author": "Artem Ryabkov",
   "license": "ISC",
   "dependencies": {
-    "countup.js": "^2.0.4",
-    "del": "latest",
+    "countup.js": "^2.0.7",
+    "del": "^6.0.0",
     "gulp": "latest",
     "gulp-autoprefixer": "latest",
     "gulp-cheerio": "latest",
@@ -27,13 +27,13 @@
     "gulp-html-replace": "latest",
     "gulp-imagemin": "latest",
     "gulp-rename": "latest",
-    "gulp-svgmin": "latest",
+    "gulp-svgmin": "^3.0.0",
     "gulp-svgstore": "latest",
     "run-sequence": "latest"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.13",
-    "critical": "^1.3.9",
+    "browser-sync": "^2.26.13",
+    "critical": "^1.3.10",
     "gulp": "3.9.1",
     "gulp-clean": "^0.3.2",
     "gulp-combine-media-queries": "^0.2.0",
@@ -42,7 +42,7 @@
     "gulp-plumber": "^1.2.0",
     "gulp-pretty-html": "^2.0.10",
     "gulp-remove-files": "0.0.3",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^4.1.0",
     "gulp-svg-sprite": "^1.3.6",
     "gulp-twig": "^1.2.0",
     "node-sass": "^5.0.0"
