--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.2.0",
     "gulp-pretty-html": "^2.0.10",
+    "gulp-purgecss": "^4.0.0",
     "gulp-remove-files": "0.0.3",
     "gulp-sass": "^4.1.0",
     "gulp-svg-sprite": "^1.3.6",
